--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.6",
     "firebase": "^10.7.2",
     "firebase-admin": "^12.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
