--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.6",
     "firebase": "^10.7.2",
     "firebase-admin": "^12.0.0",
+    "flowbite-react": "^0.7.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
