--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@wojtekmaj/react-daterange-picker": "^5.5.0",
     "axios": "^1.6.6",
     "firebase": "^10.7.2",
     "firebase-admin": "^12.0.0",
+    "flowbite-datepicker": "^1.2.6",
     "flowbite-react": "^0.7.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
