--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@wojtekmaj/react-daterange-picker": "^5.5.0",
     "axios": "^1.6.6",
+    "bootstrap": "^5.3.2",
     "firebase": "^10.7.2",
     "firebase-admin": "^12.0.0",
     "flowbite-datepicker": "^1.2.6",
@@ -19,6 +20,7 @@
     "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
     "uuid": "^9.0.1"
