--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.4",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
