--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@wojtekmaj/react-daterange-picker": "^5.5.0",
     "axios": "^1.6.6",
     "bootstrap": "^5.3.2",
+    "classnames": "^2.5.1",
     "firebase": "^10.7.2",
     "firebase-admin": "^12.0.0",
     "flowbite-datepicker": "^1.2.6",
