--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
     "@wojtekmaj/react-daterange-picker": "^5.5.0",
     "axios": "^1.6.6",
     "bootstrap": "^5.3.2",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.0",
     "firebase": "^10.7.2",
     "firebase-admin": "^12.0.0",
     "flowbite-datepicker": "^1.2.6",
     "flowbite-react": "^0.7.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.321.0",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
@@ -26,6 +30,8 @@
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
