--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@wojtekmaj/react-daterange-picker": "^5.5.0",
     "axios": "^1.6.6",
-    "bootstrap": "^5.3.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0-rc22",
+    "embla-carousel-react": "^8.0.0-rc22",
     "firebase": "^10.7.2",
     "firebase-admin": "^12.0.0",
     "flowbite-datepicker": "^1.2.6",
@@ -25,7 +28,6 @@
     "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
