--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "sharp": "^0.33.2",
