--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,19 @@
 version: "3.8"
 services:
+  next-app:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mongodb
+    environment:
+      - MONGODB_URI=mongodb://mongodb:27017/booking2_mongodb
+      - JWT_SECRET=gwsuydwqfuyqewgfyeqgfiugeqfqfpiue
+    volumes:
+      - server_files:/public/static
+
   mongodb:
     image: mongo
     container_name: booking2_mongodb
@@ -10,3 +24,4 @@ services:
 
 volumes:
   booking2_mongodb_data:
+  server_files:
